--- a/src/Styles/TravelPackage.css
+++ b/src/Styles/TravelPackage.css
@@ -2,6 +2,7 @@
 
 .bodyaa {
     background-image:  url("../Images/tp1.jpg") ;
+    background-repeat: no-repeat;
    background-size: cover;
   }
   
@@ -9,7 +10,7 @@
    max-width: 70%;
    padding: 15spx;
    margin: 0 auto;
-   border-radius: 0.3em;
+   border-radius: 2em;
    background-color: #b4b2b2d5;
   
   }
@@ -123,15 +124,13 @@ background: linear-gradient(16deg, rgba(102,101,101,1) 12%, rgba(111,111,111,1) 
   
   
   .reg {
-     display:inline-block;
-     padding:5px 100px;
-     background-color: rgb(197, 11, 11);
-     font-size:18px;
+   
+     font-size:21px;
      border:5px;
-     border-radius:15px;
+     border-radius:5px;
      color:#bcf5e7;
      cursor:pointer;
-    
+  
      
   }
   
@@ -320,14 +319,17 @@ background: linear-gradient(16deg, rgba(102,101,101,1) 12%, rgba(111,111,111,1) 
 .crdbody2{
   font-size: 14px;
 }
+.boodydetails{
+  background-color: hsl(0,0%,75%,0.1)	;
+}
 
-/*
+
 .bodytravelpackage{
   
   background: rgb(49,3,3);
   background: linear-gradient(16deg, rgba(49,3,3,0.2222027725048279) 0%, rgba(128,191,98,0.6182701882351651) 46%, rgba(196,196,196,0.2559106376733673) 100%);
 }
-*/
+
 .infotr{
  
   color: #252525;
